--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This gonna go to git repository</p>
     <a href="https://github.com/">my github account</a>
     <p>adding login.html</p>
+    <p>I made a change</p>
 </body>
 </html>
